[package]
name = "plate-api-rs"
version = "0.1.0"
authors = ["jorian"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.0", features = [ "blocking", "json" ] }
url = "2.2.1"
hmac = "0.10.1"
sha2 = "0.9.3"
base64 = "0.13.0"
chrono = "0.4.19"
hyper = "0.14.4"
serde = "1.0.123"
serde_json = "1.0.63"
indoc = "1.0"